--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,15 +3,15 @@
 html,
 body,
 #app {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  /*height: 100%;*/
+  /*margin: 0;*/
+  /*padding: 0;*/
 }
 
-html.dark {
-  background: #121212;
-  color-scheme: dark;
-}
+/*html.dark {*/
+/*  background: #121212;*/
+/*  color-scheme: dark;*/
+/*}*/
 
 #nprogress {
   pointer-events: none;
